gcc/testsuite/gdc.test/compilable/imports/test13582.d
deprecated module imports.test13582;
