gcc/testsuite/gdc.test/fail_compilation/imports/fail20164.d
deprecated module imports.fail20164;
